fix: fix services-videos horizontal slide width on mobile

--- a/wp-app/wp-content/themes/attract/modules/services-videos/services-videos.scss
+++ b/wp-app/wp-content/themes/attract/modules/services-videos/services-videos.scss
@@ -49,8 +49,9 @@
                 .swiper-slide {
                     width: calc(50% - 5px);
                     min-width: 470px;
-                    @include _430 {
-                        min-width: 441px;
+                    @include _480 {
+                        width: 100%;
+                        min-width: 280px;
                     }
                 }
             }
